# 2026-p1-shivammtrivedi

./: README.md  endpoints.http  pyproject.toml
todo/views/: routes.py
