[project]
name = "practical01"
version = "0.1.0"
description = "practical01"
authors = [
    {name = "shivamtrivedi",email = "shivammtrivedi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
